--- a/Parallel_Jacobi/CMakeLists.txt
+++ b/Parallel_Jacobi/CMakeLists.txt
@@ -3,11 +3,11 @@ project(JacobiSVD)
 
 set(CMAKE_CXX_STANDARD 14)
 
-# add_executable(JacobiSVD main.cpp Matrix/Matrix.cpp Matrix/Matrix.h common.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
+add_executable(JacobiSVD main.cpp Matrix/Matrix.cpp Matrix/Matrix.h common.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
 
-# add_executable(Demo demo.cpp Matrix/Matrix.cpp Matrix/Matrix.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
+add_executable(Demo demo.cpp Matrix/Matrix.cpp Matrix/Matrix.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
 
-# add_executable(Core_test Core_test.cpp Matrix/Matrix.cpp Matrix/Matrix.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
+add_executable(Core_test Core_test.cpp Matrix/Matrix.cpp Matrix/Matrix.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
 
 add_executable(test test.cpp Matrix/Matrix.cpp Matrix/Matrix.h common.h Serial/Serial.cpp Serial/Serial.h Parallel/Parallel.cpp Parallel/Parallel.h BlockParallel/BlockParallel.cpp BlockParallel/BlockParallel.h)
 
